# Catet-Task

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build-mac.yml  build-windows.yml
catet-cli/: Cargo.toml
catet-cli/src/: credentials.rs  db.rs  format.rs  jira.rs  main.rs  mcp.rs  models.rs
docs/: JiraTimeTracker-PRD-v1.docx  JiraTimeTracker-PRD-v1.md  api-audit.md  retrack-after-logged-reference.md
docs/mockups/: jira-timetracker-final-mockup.html
src/: App.svelte  app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_add_parent.sql
src-tauri/src/: lib.rs  main.rs  power.rs
src-tauri/src/commands/: app.rs  auth.rs  mod.rs  settings.rs  tasks.rs  timer.rs  worklog.rs
src-tauri/src/db/: queries.rs
src-tauri/src/jira/: client.rs  models.rs
src-tauri/src/reminder/: mod.rs
src-tauri/src/timer/: engine.rs
src/components/: EntryEditor.svelte  LogFlow.svelte  Login.svelte  Panel.svelte  SearchBar.svelte  Settings.svelte  SubmitProgress.svelte  SuccessScreen.svelte  TaskCard.svelte  TaskDetail.svelte  Timer.svelte  Today.svelte  Weekly.svelte
src/components/shared/: Badge.svelte  Checkbox.svelte  CommentField.svelte  DurationInput.svelte
src/lib/: types.ts
src/lib/api/: tauri.ts
src/lib/stores/: auth.svelte.ts  entries.svelte.ts  entriesWeekly.svelte.ts  tasks.svelte.ts  timer.svelte.ts
src/lib/utils/: projectColor.ts  rounding.ts  text.ts  time.ts
