[package]
name = "jira-timetracker"
version = "0.1.0"
edition = "2021"
description = "Jira TimeTracker - Menu bar time tracking app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-positioner = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = { version = "3", features = [] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
log = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
indexmap = { version = "2", features = ["serde"] }
urlencoding = "2.1.3"
tauri-plugin-autostart = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
